--- a/.config
+++ b/.config
@@ -241,7 +241,7 @@ CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_libwrap=y
 CONFIG_PACKAGE_libxml2=y
 CONFIG_PACKAGE_libzstd=y
-# CONFIG_PACKAGE_luci-app-adbyby-plus is not set
+CONFIG_PACKAGE_luci-app-adbyby-plus=y 
 CONFIG_PACKAGE_luci-app-adguardhome=y
 CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-cifsd=y
