--- a/.config
+++ b/.config
@@ -93,6 +93,7 @@ CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_frpc=y
 CONFIG_PACKAGE_git=y
 CONFIG_PACKAGE_gzip=y
+CONFIG_PACKAGE_knot-dig=y
 CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_hd-idle=y
 CONFIG_PACKAGE_htop=y
