--- a/.config
+++ b/.config
@@ -92,8 +92,12 @@ CONFIG_PACKAGE_f2fsck=y
 CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_frpc=y
 CONFIG_PACKAGE_git=y
+CONFIG_PACKAGE_arping=y
+CONFIG_PACKAGE_httping=y
+CONFIG_PACKAGE_mtr=y
 CONFIG_PACKAGE_gzip=y
 CONFIG_PACKAGE_knot-dig=y
+CONFIG_PACKAGE_bind-dig=y
 CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_hd-idle=y
 CONFIG_PACKAGE_htop=y
