--- a/.config
+++ b/.config
@@ -101,6 +101,7 @@ CONFIG_PACKAGE_bind-dig=y
 CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_hd-idle=y
 CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_stubby
 CONFIG_PACKAGE_icu=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ip6tables-extra=y
@@ -258,18 +259,18 @@ CONFIG_PACKAGE_luci-app-filebrowser=y
 CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_luci-app-minidlna=y
-CONFIG_PACKAGE_luci-app-netdata=y
+CONFIG_PACKAGE_luci-app-netdata=n
 CONFIG_PACKAGE_luci-app-nfs=y
 CONFIG_PACKAGE_luci-app-onliner=y
-CONFIG_PACKAGE_luci-app-passwall=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_socks=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_socks=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_kcptun=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-plugin=n
+CONFIG_PACKAGE_luci-app-passwall=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_socks=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_socks=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_kcptun=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-plugin=y
 CONFIG_PACKAGE_luci-app-qbittorrent=y
 CONFIG_PACKAGE_luci-app-shairplay=y
 CONFIG_PACKAGE_luci-app-smartdns=n
@@ -292,10 +293,10 @@ CONFIG_PACKAGE_luci-i18n-cifsd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-filebrowser-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-minidlna-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=n
 CONFIG_PACKAGE_luci-i18n-nfs-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-qbittorrent-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=n
 CONFIG_PACKAGE_luci-i18n-statistics-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-verysync-zh-cn=y
@@ -311,7 +312,7 @@ CONFIG_PACKAGE_luci-theme-material=y
 CONFIG_PACKAGE_minidlna=y
 CONFIG_PACKAGE_mount-utils=y
 CONFIG_PACKAGE_nano=y
-CONFIG_PACKAGE_netdata=y
+CONFIG_PACKAGE_netdata=n
 CONFIG_PACKAGE_nfs-kernel-server=y
 CONFIG_PACKAGE_nfs-kernel-server-utils=y
 CONFIG_PACKAGE_nfs-utils=y
@@ -359,7 +360,7 @@ CONFIG_PACKAGE_shadowsocksr-libev-server=y
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
 CONFIG_PACKAGE_shairplay=y
 CONFIG_PACKAGE_simple-obfs=y
-CONFIG_PACKAGE_smartdns=y
+CONFIG_PACKAGE_smartdns=n
 CONFIG_PACKAGE_smartmontools=y
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_terminfo=y
